--- a/ltx/paper_refs.bib
+++ b/ltx/paper_refs.bib
@@ -3,7 +3,51 @@
 % refs_paper.bib
 
 
-% this is the .bib file containing bibliographies for the paper draft. I am making a separate .bib file because I plan to reorganize entries based on main topics in this paper and hopefully annotate them too.
+% this is the .bib file containing bibliographies for the paper draft.
+
+
+
+
+
+
+
+% recent
+
+
+% griffin and steel, introducing dependent dirichlet processes
+
+@article{griffin2006order,
+  title={Order-based dependent Dirichlet processes},
+  author={Griffin, J.E. and Steel, M.F.J.},
+  journal={Journal of the American statistical Association},
+  volume={101},
+  number={473},
+  pages={179--194},
+  year={2006},
+  publisher={ASA}
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
